          a few times as it didn't measure up to commitable standards).

2012-07-10  Gustavo Lima Chaves

	* Add elm_scroller_page_size_get() and
	  elm_scroller_page_relative_get() for consistency (some scrolling
	  widgets got these gettes before).

2012-07-10  Rob Bradford

	* Expose into private API a function for getting the X window from an
	Ecore_Evas using the backend safe functions.
	* Use this new API to replace a non backend safe call in the copy and
	paste code

2012-07-12  Tae-Hwan Kim (Bluezery)

	* Fix that vertical bounce enable value can be get from elm_config
	when the genlist is added.

2012-07-16  Carsten Haitzler (The Rasterman)

	* Disable html mode pastes from cnp to work around thunderbird.

2012-07-18  Carsten Haitzler (The Rasterman)

	* Fix evil little bug where scrolelrs with scrollbars make
        self-feeding loops expecially with min size hints on scrollers (which
        the change in smart object infra broke too - fixed here).

2012-07-18  Yan Wang

        * Small fix to account for framespace that is used in wayland
        (0 in x11 so shouldnt affect x11).

2012-07-18  Hermet (ChunEon Park)

	* Fix the mapbuf to resize the contents(smart obj) correctly. When smart obj was
	set as the contents the _configure would be called recursively. In this process
	the lastest size could be reverted as the previous one.

2012-07-19  Gustavo Sverzut Barbieri (k-s)

	* Add Elm_Win_Trap and elm_win_trap_set() to allow e17 integration.

2012-07-23  Hermet (ChunEon Park)

	* fixed invalid sd memory access when delete window inlined image

2012-07-24  Hermet (ChunEon Park)

	* fixed scroller to not have the hold flag when mouse up happened.

2012-07-24  Gustavo Sverzut Barbieri (k-s)

	* Add elm_flip_go_to()

2012-07-25  Carsten Haitzler (The Rasterman)

	* Fix elementary quicklaunch to transprot environment over as
        well as args and cwd.

2012-07-27  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access supoprt in popup.
