@@ -31,6 +31,7 @@ Fixes:
 Improvements:
 
    * Allocate once and reuse Evas_Map.
+   * Allow freeze/thaw on Elm_Layout and reduce number of object update.
 
 Removal:
 
