@@ -354,3 +354,6 @@
 
 	* Patch in incomplete access supoprt in popup.
 
+2012-07-30  Cedric Bail
+
+	* Allow freeze/thaw on Elm_Layout and reduce number of object update.
